<resources>
    <string name="app_name">Trips</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">ITI Android 2021 - Team 4</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_account">Account</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="welcome_welcome">Welcome</string>
    <string name="welcome_body">Create an account and access thousand</string>
    <string name="welcome_getting_started">Getting Started</string>
    <string name="welcome_have_account">Already have an account?</string>
    <string name="welcome_login">Log in</string>
    <string name="welcome_skip_for_now">Skip for now?</string>
    <string name="welcome_skip">Skip</string>
    <string name="login_login">Log in</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_body">Login to continue using our app</string>
    <string name="login_signup">Sign Up</string>
    <string name="signup_signup">Sign Up Now</string>
    <string name="signup_have_account">Already have an account?</string>
    <string name="signup_body">Enter your data and create a new account</string>
    <string name="signup_login">Login</string>

    <string name="up_coming">UPCOMING</string>
    <string name="history">HISTORY</string>
    <string name="account">Account details</string>
    <string name="sync">SYNC</string>
    <string name="log_out">Log Out</string>
    <string name="account_setting">Account Setting</string>
    <string name="start">start</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="todo">TODO</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="desc">Desc</string>
    <string name="app_logo">Logo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="categories" />
    <string name="work">Work</string>
    <string name="entertainment">Entertainment</string>
    <string name="shopping">Shopping</string>
    <string name="all_trips">All Trips</string>
    <string name="notes">Add Notes</string>
    <string name="reuse">Reuse</string>
    <string name="confirm_reuse">Reuse this trip again?</string>
    <string name="confirm_delete">Delete this trip permanently?</string>

    <string name="create_floating_widget">Create Floating Widget</string>
    <string name="floating_widget_label">Notes</string>
    <string name="floating_widget_details">Check your trip notes</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>

    <string name="where_to_go">Where to go</string>
    <string name="title">Add title to your trip here</string>
    <string name="your_location">Your location</string>
    <string name="your_destination">Your Destination</string>
    <string name="due_date">Due Date</string>
    <string name="no_due_date">No Due Date</string>
    <string name="time_not_set">Time Not Set</string>
    <string name="where">Where are you going ?</string>
    <string name="kind">Kind of trip</string>
    <string name="add_notes">Add Notes</string>

    <string-array name="kind_trip">
        <item>One Way Trip</item>
        <item>Round</item>
    </string-array>
    <string-array name="repeatition">
        <item>No Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="snooze">Snooze</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>

    <string name="round">Round</string>
    <string name="one_way">One Way</string>
    <string name="go_to_the_app">Go to the app</string>

</resources>