<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:checkableBehavior="single"

        android:enabled="true"
        android:icon="@drawable/ic_baseline_arrow_drop_down_24"
        android:title="@string/categories"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/item_work"
                android:title="@string/work" />
            <item
                android:id="@+id/item_entertainment"
                android:title="@string/entertainment" />
            <item
                android:id="@+id/item_shopping"
                android:title="@string/shopping" />
            <item
                android:id="@+id/all_categories"
                android:title="@string/all_trips" />
        </menu>
    </item>


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />

</menu>