<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="#E4E1E1"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="43dp"
            android:layout_height="47dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toEndOf="@+id/your_location"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:srcCompat="@drawable/ic_baseline_add_location_alt_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="44dp"
            android:layout_height="50dp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toEndOf="@+id/your_distenation"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/ic_baseline_add_location_alt_24"
            tools:ignore="VectorDrawableCompat" />

        <Space
            android:layout_width="405dp"
            android:layout_height="731dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Spinner
            android:id="@+id/kind_of_trip"
            android:layout_width="163dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:entries="@array/kind_trip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/repeatation"
            app:layout_constraintTop_toBottomOf="@+id/clock" />

        <Spinner
            android:id="@+id/repeatation"
            android:layout_width="188dp"
            android:layout_height="54dp"
            android:entries="@array/repeatition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_time" />

        <TextView
            android:id="@+id/notes"
            android:layout_width="185dp"
            android:layout_height="96dp"
            android:background="#FFF9F9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_notes"
            app:layout_constraintVertical_bias="0.428" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="65dp"
            android:layout_height="54dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clock"
            app:layout_constraintVertical_bias="0.848"
            app:srcCompat="@drawable/ic_baseline_check_24"
            tools:ignore="VectorDrawableCompat" />

        <Button
            android:id="@+id/Notes"
            android:layout_width="143dp"
            android:layout_height="49dp"
            android:layout_marginStart="216dp"
            android:layout_marginTop="12dp"
            android:text="@string/notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kind_of_trip" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="57dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/set_time"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:srcCompat="@drawable/ic_baseline_alarm_add_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/set_time"
            android:layout_width="270dp"
            android:layout_height="54dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:hint="@string/time_not_set"
            android:inputType="time"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="170dp"
            android:layout_height="38dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/time"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/due_date" />

        <ImageView
            android:id="@+id/date"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_marginTop="348dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toEndOf="@+id/due_date"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_calendar_today_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/due_date"
            android:layout_width="266dp"
            android:layout_height="54dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:hint="@string/no_due_date"
            android:inputType="date"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/due_date"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_distenation" />

        <SearchView
            android:id="@+id/your_distenation"
            android:layout_width="291dp"
            android:layout_height="52dp"
            android:queryHint="@string/your_destination"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="161dp"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="End Point"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_location" />

        <SearchView
            android:id="@+id/your_location"
            android:layout_width="297dp"
            android:layout_height="49dp"
            android:queryHint="@string/your_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="168dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/start_point"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/title"
            android:layout_width="358dp"
            android:layout_height="53dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="253dp"
            android:layout_height="33dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/where"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_notes"
            android:layout_width="190dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/add_notes"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/Notes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
